--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         
         <div class="bio-card">
             <div class="photo">
-                <img src="https://via.placeholder.com/150" alt="Student Photo">
+                <img src="img/Selfie.jpg" alt= "Melissa">
             </div>
             <div class="bio">
-                <h2>John Doe</h2>
-                <p>Hi, I'm John, a passionate software developer currently enrolled in the Code:You bootcamp. I love building responsive web applications and constantly exploring new technologies.</p>
+                <h2>Melissa Lowe</h2>
+                <p>Hi, I'm Melissa, a passionate learner of all technology advancements and am currently enrolled in the Code:You bootcamp. I love actually seeing something I've coded come to life.</p>
             </div>
         </div>
 
@@ -28,6 +28,8 @@
             <a href="https://linkedin.com/in/username" target="_blank" class="link-btn">LinkedIn</a>
         </div>
     </div>
-
+<script>
+    alert("Hello world, I'm a developer");
+</script>
 </body>
 </html>
